2010-09-22  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* lib/scanasm.exp(dg-function-on-line): Permit .fnstart to appear in
        the regexp pattern between the expected label and location string.

2010-09-22  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* gcc.dg/pr28706.c: Typo fix to dg-require-effective-target lto.

2010-09-22  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* gcc.dg/debug/pr41893-1.c: Typo fix to dg-require-effective-target lto.
	* gcc.dg/pr27898.c: Likewise.
	* gcc.dg/pr28712.c: Likewise.
	* gcc.dg/pr30762-1.c: Likewise.
	* gcc.dg/pr31529-1.c: Likewise.
	* gcc.dg/pr34457-1.c: Likewise.
	* gcc.dg/pr34668-1.c: Likewise.
	* gcc.dg/pr34989-1.c: Likewise.
	* gcc.dg/pr43557-1.c: Likewise.

2010-09-22  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/45739
	* gcc.target/i386/pr45739.c: Tighten up scan-assembler-not
	regexps.

2010-09-22  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.target/sparc/mnofpu.c: New test.

2010-09-22  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/45739
	* gcc.target/i386/pr45739.c: New test.

2010-09-21  Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/45648
	* gfortran.dg/inline_transpose_1.f90: Update temporary's locations
	and counts. Add non-elemental function call check.

	PR fortran/45648
	* gfortran.dg/inline_transpose_1.f90: Add function calls with aliasing
	arguments checks. Update temporary counts.
	* gfortran.dg/transpose_optimization_1.f90: New.

2010-09-21  Nicola Pero  <nicola.pero@meta-innovation.com>

	PR objc/23710
	* objc.dg/invalid-method-1.m: New.

2010-09-21  Nicola Pero  <nicola.pero@meta-innovation.com>

	Merge from 'apple/trunk' branch on FSF servers.

	2005-10-11  Fariborz Jahanian <fjahanian@apple.com>

	Radar 4291785
	objc.dg/naming-4.m: New
	objc.dg/naming-5.m: New
	obj-c++.dg/naming-1.mm: New
	obj-c++.dg/naming-2.mm: New

2010-09-21  Jonathan Wakely  <redi@gcc.gnu.org>
	    Jack Howarth  <howarth@bromo.med.uc.edu>

	PR c++/45645