@@ -1,3 +1,8 @@
+2010-09-22  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
+	PR libfortran/45710
+	* gfortran.dg/namelist_65.f90: New test.
+
 2010-09-22  Marcus Shawcroft  <marcus.shawcroft@arm.com>
 
 	* lib/scanasm.exp(dg-function-on-line): Permit .fnstart to appear in
